--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ div.tocify {
 <p>What you get out of this class is in direct proportion to what you put in. Thoughtful participation is critical. That said, we all have different personalities and strengths, and participation need not come in the form of in-class speaking. Your participation grade will come from your engagement in several venues. Excellence in one can make up for sparse participation in another:</p>
 <ul>
 <li>Class attendance and active, thoughtful contributions to discussion</li>
-<li>Backchannel online chat in class</li>
+<li><a href="https://backchannelchat.com/chat/g/dmwb/">Backchannel online chat</a> in class</li>
 <li>Out-of-class online forum participation</li>
 <li>Debate preparation and performance</li>
 </ul>
@@ -400,6 +400,7 @@ div.tocify {
 <ul>
 <li><p>Read: Wong (2017) <a href="https://www.newscientist.com/article/mg23431302-800-microdosers-say-tiny-hits-of-lsd-make-you-better-at-work-and-life/">Microdosers say tiny hits of LSD make work and life better.</a> <em>New Scientist</em></p></li>
 <li><p>Read: Cabrera &amp; Reiner (2015) <a href="https://drive.google.com/file/d/1DQk00V25BFKTwbQI2LXsRfoFbYE8qW-a/view?usp=sharing">Understanding public (mis)understanding of tDCS for enhancement.</a> <em>Frontiers of Integrative Neuroscience</em></p></li>
+<li><p>Skim: Ly et al., (2018) <a href="https://drive.google.com/file/d/1tCDQZf6qBca2IJEBT9BsDbwnEXpIFvHA/view?usp=sharing">Psychedelics promote structural and functional neural plasticity</a> <em>Cell</em></p></li>
 <li><p>Spend some time looking at SubReddits <a href="https://www.reddit.com/r/microdosing/">relating to microdosing</a> and <a href="https://www.reddit/com/r/tDCS/">transcranial direct current stimulation</a><br />
  </p></li>
 </ul>
